--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -99,6 +99,7 @@
         "express-rate-limit": "^6.9.0",
         "express-session": "^1.18.1",
         "flowise-components": "workspace:*",
+        "flowise-nim-container-manager": "^1.0.11",
         "global-agent": "^3.0.0",
         "google-auth-library": "^9.4.0",
         "googleapis": "^144.0.0",
@@ -119,9 +120,9 @@
         "nim-container-manager": "^1.0.4",
         "openai": "4.96.0",
         "passport": "^0.7.0",
+        "passport-forcedotcom": "^0.2.1",
         "passport-google-oauth20": "^2.0.0",
         "passport-oauth2": "^1.8.0",
-        "flowise-nim-container-manager": "^1.0.11",
         "pg": "^8.11.2",
         "posthog-node": "^3.5.0",
         "prom-client": "^15.1.3",
@@ -144,17 +145,17 @@
         "@types/content-disposition": "0.5.8",
         "@types/cors": "^2.8.18",
         "@types/crypto-js": "^4.1.1",
-        "@types/express-session": "^1.18.1",
         "@types/express": "^4.17.13",
+        "@types/express-session": "^1.18.1",
         "@types/jest": "^29.5.12",
         "@types/lodash": "^4.17.19",
         "@types/mailparser": "^3.4.5",
         "@types/mocha": "^10.0.6",
-        "@types/multer-s3": "^3.0.3",
         "@types/multer": "^1.4.7",
+        "@types/multer-s3": "^3.0.3",
+        "@types/passport": "^1.0.17",
         "@types/passport-google-oauth20": "^2.0.16",
         "@types/passport-oauth2": "^1.4.15",
-        "@types/passport": "^1.0.17",
         "@types/pdf-parse": "^1.1.4",
         "@types/sanitize-html": "^2.9.5",
         "@types/turndown": "^5.0.5",
