--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -120,6 +120,7 @@
         "nim-container-manager": "^1.0.5",
         "openai": "4.96.0",
         "passport": "^0.7.0",
+        "passport-custom": "^1.1.1",
         "passport-google-oauth20": "^2.0.0",
         "passport-oauth2": "^1.8.0",
         "pg": "^8.16.3",
