--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
         "@typescript-eslint/typescript-estree": "^7.18.0",
         "axios": "1.8.2",
         "cursor-tools": "latest",
-        "cypress": "^12.17.4",
+        "cypress": "^13.17.0",
         "dotenv": "^16.6.1",
         "dotenv-cli": "^8.0.0",
         "eslint": "^8.57.1",
@@ -86,7 +86,7 @@
         "husky": "^8.0.3",
         "kill-port": "^2.0.1",
         "knip": "^5.62.0",
-        "lint-staged": "^13.3.0",
+        "lint-staged": "^15.2.0",
         "prettier": "^2.8.8",
         "pretty-quick": "^3.3.1",
         "rimraf": "^6.0.1",
@@ -111,11 +111,11 @@
             "ejs": "^3.1.10",
             "form-data": "^4.0.4",
             "glob-parent": "6.0.2",
-            "http-proxy-middleware": "3.0.3",
+            "http-proxy-middleware": ">=3.0.5",
             "json5": "2.2.3",
             "nth-check": "2.1.1",
             "path-to-regexp": "0.1.12",
-            "prismjs": "1.29.0",
+            "prismjs": ">=1.30.0",
             "semver": "7.7.1",
             "set-value": "4.1.0",
             "unset-value": "2.0.1",
@@ -123,7 +123,15 @@
             "ws": "8.17.1",
             "axios": "1.8.2",
             "qs": "6.7.3",
-            "tar-fs": "3.0.9"
+            "tar-fs": "3.0.9",
+            "express": ">=4.19.2",
+            "tough-cookie": ">=4.1.3",
+            "micromatch": ">=4.0.8",
+            "webpack-dev-server": ">=5.2.1",
+            "esbuild": ">=0.25.0",
+            "send": ">=0.19.0",
+            "serve-static": ">=1.16.0",
+            "cookie": ">=0.7.0"
         }
     },
     "engines": {
