--- a/.gitignore
+++ b/.gitignore
@@ -111,9 +111,14 @@ daisy
 # sst
 .sst
 
+# Explicitly ignore all manifest files in the environments directory
+copilot/environments/**/manifest.yml
+# Manifests to include in the repo:
 !copilot/environments/addons/flowise-cluster.yml
 !copilot/environments/staging/manifest.yml
-copilot/environments/**/manifest.yml
+!copilot/environments/prod/manifest.yml
+!copilot/environments/staging-standalone/manifest.yml
+!copilot/environments/prod-standalone/manifest.yml
 
 ## AnswerAI
 
